typo palette table update

--- a/packages/storybook-html/src/components/core/typography.story.mdx
+++ b/packages/storybook-html/src/components/core/typography.story.mdx
@@ -164,8 +164,9 @@ export const FontItalic = () => `
       <th className="uqds-table__heading">Font</th>
       <th className="uqds-table__heading">Size</th>
       <th className="uqds-table__heading">Weight</th>
+      <th className="uqds-table__heading">Style</th>
       <th className="uqds-table__heading">Colour (SASS Variable)</th>
-      <th className="uqds-table__heading">Line-height</th>
+      <th className="uqds-table__heading">Line height</th>
       <th className="uqds-table__heading">Usage example</th>
     </tr>
   </thead>
@@ -174,82 +175,127 @@ export const FontItalic = () => `
       <td className="uqds-table__item">H1</td>
       <td className="uqds-table__item" data-title="Font:">Montserrat</td>
       <td className="uqds-table__item" data-title="Size:">XL - 2.5rem, <br /> MD - 1.875rem</td>
-      <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
+      <td className="uqds-table__item" data-title="Weight:">Medium 500</td>
+      <td className="uqds-table__item" data-title="Style:"> - </td>
       <td className="uqds-table__item" data-title="Colour (SASS Variable):"><code>$uq-purple</code></td>
-      <td className="uqds-table__item" data-title="Line-height:">1.4</td>
-      <td className="uqds-table__item" data-title="Usage example:">Page Header</td>
+      <td className="uqds-table__item" data-title="Line height:">1.4</td>
+      <td className="uqds-table__item" data-title="Usage example:">
+        <div class="uqds-fonts">
+          <div class="uqds-font uqds-font--montserrat uqds-font--500"><h1>Page header</h1></div>
+        </div>
+      </td>
     </tr>
     <tr className="uqds-table__row">
       <td className="uqds-table__item">H2</td>
       <td className="uqds-table__item" data-title="Font:">Roboto</td>
       <td className="uqds-table__item" data-title="Size:">XL - 2rem, <br /> MD - 1.5rem</td>
-      <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
+      <td className="uqds-table__item" data-title="Weight:">Medium 500</td>
+      <td className="uqds-table__item" data-title="Style:"> - </td>
       <td className="uqds-table__item" data-title="Colour (SASS Variable):"><code>$uq-purple</code></td>
-      <td className="uqds-table__item" data-title="Line-height:">1.4</td>
-      <td className="uqds-table__item" data-title="Usage example:">Header</td>
+      <td className="uqds-table__item" data-title="Line height:">1.4</td>
+      <td className="uqds-table__item" data-title="Usage example:">
+        <div class="uqds-fonts">
+          <div class="uqds-font uqds-font--roboto uqds-font--500"><h2>Sub header</h2></div>
+        </div>
+      </td>
     </tr>
     <tr className="uqds-table__row">
       <td className="uqds-table__item">H3</td>
       <td className="uqds-table__item" data-title="Font:">Roboto</td>
       <td className="uqds-table__item" data-title="Size:">XL - 1.5rem, <br /> MD - 1.375rem</td>
-      <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
+      <td className="uqds-table__item" data-title="Weight:">Medium 500</td>
+      <td className="uqds-table__item" data-title="Style:"> - </td>
       <td className="uqds-table__item" data-title="Colour (SASS Variable):"><code>$uq-purple</code></td>
-      <td className="uqds-table__item" data-title="Line-height:">1.4</td>
-      <td className="uqds-table__item" data-title="Usage example:">Header</td>
+      <td className="uqds-table__item" data-title="Line height:">1.4</td>
+      <td className="uqds-table__item" data-title="Usage example:">
+        <div class="uqds-fonts">
+          <div class="uqds-font uqds-font--roboto uqds-font--500"><h3>Sub header</h3></div>
+        </div>
+      </td>
     </tr>
     <tr className="uqds-table__row">
       <td className="uqds-table__item">H4</td>
       <td className="uqds-table__item" data-title="Font:">Roboto</td>
       <td className="uqds-table__item" data-title="Size:">XL - 1.25rem, <br /> MD - 1.25rem</td>
-      <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
+      <td className="uqds-table__item" data-title="Weight:">Medium 500</td>
+      <td className="uqds-table__item" data-title="Style:"> - </td>
       <td className="uqds-table__item" data-title="Colour (SASS Variable):"><code>$uq-purple</code></td>
-      <td className="uqds-table__item" data-title="Line-height:">1.4</td>
-      <td className="uqds-table__item" data-title="Usage example:">Header</td>
+      <td className="uqds-table__item" data-title="Line height:">1.4</td>
+      <td className="uqds-table__item" data-title="Usage example:">
+        <div class="uqds-fonts">
+          <div class="uqds-font uqds-font--roboto uqds-font--500"><h4>Sub header</h4></div>
+        </div>
+      </td>
     </tr>
     <tr className="uqds-table__row">
       <td className="uqds-table__item">H5</td>
       <td className="uqds-table__item" data-title="Font:">Roboto</td>
       <td className="uqds-table__item" data-title="Size:">XL - 1.125rem, <br /> MD - 1.125rem</td>
-      <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
+      <td className="uqds-table__item" data-title="Weight:">Medium 500</td>
+      <td className="uqds-table__item" data-title="Style:"> - </td>
       <td className="uqds-table__item" data-title="Colour (SASS Variable):"><code>$uq-purple</code></td>
-      <td className="uqds-table__item" data-title="Line-height:">1.4</td>
-      <td className="uqds-table__item" data-title="Usage example:">Header</td>
+      <td className="uqds-table__item" data-title="Line height:">1.4</td>
+      <td className="uqds-table__item" data-title="Usage example:">
+        <div class="uqds-fonts">
+          <div class="uqds-font uqds-font--roboto uqds-font--500"><h5>Sub header</h5></div>
+        </div>
+      </td>
     </tr>
     <tr className="uqds-table__row">
       <td className="uqds-table__item">H6</td>
       <td className="uqds-table__item" data-title="Font:">Roboto</td>
       <td className="uqds-table__item" data-title="Size:">XL - 1rem, <br /> MD - 1rem</td>
-      <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
+      <td className="uqds-table__item" data-title="Weight:">Medium 500</td>
+      <td className="uqds-table__item" data-title="Style:"> - </td>
       <td className="uqds-table__item" data-title="Colour (SASS Variable):"><code>$uq-purple</code></td>
-      <td className="uqds-table__item" data-title="Line-height:">1.4</td>
-      <td className="uqds-table__item" data-title="Usage example:">Header</td>
+      <td className="uqds-table__item" data-title="Line height:">1.4</td>
+      <td className="uqds-table__item" data-title="Usage example:">
+        <div class="uqds-fonts">
+          <div class="uqds-font uqds-font--roboto uqds-font--500"><h6>Sub header</h6></div>
+        </div>
+      </td>
     </tr>
     <tr className="uqds-table__row">
       <td className="uqds-table__item">Text</td>
       <td className="uqds-table__item" data-title="Font:">Roboto</td>
       <td className="uqds-table__item" data-title="Size:">XL - 1rem, <br /> MD - 1rem</td>
-      <td className="uqds-table__item" data-title="Weight:">Regular, 400</td>
-      <td className="uqds-table__item" data-title="Colour (SASS Variable):">Default text, <code>$text</code>, <code>$uq-neutral-dark80</code>, #2b2a29</td>
-      <td className="uqds-table__item" data-title="Line-height:">1.5</td>
-      <td className="uqds-table__item" data-title="Usage example:">Text</td>
+      <td className="uqds-table__item" data-title="Weight:">Regular 400</td>
+      <td className="uqds-table__item" data-title="Style:"> - </td>
+      <td className="uqds-table__item" data-title="Colour (SASS Variable):"><code>$text</code>, <code>$uq-neutral-dark80</code></td>
+      <td className="uqds-table__item" data-title="Line height:">1.5</td>
+      <td className="uqds-table__item" data-title="Usage example:">
+        <div class="uqds-fonts">
+          <div class="uqds-font uqds-font--roboto uqds-font--400">Text</div>
+        </div>
+      </td>
     </tr>
     <tr className="uqds-table__row">
       <td className="uqds-table__item">Bold</td>
       <td className="uqds-table__item" data-title="Font:">Roboto</td>
       <td className="uqds-table__item" data-title="Size:">XL - 1rem, <br /> MD - 1rem</td>
-      <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
-      <td className="uqds-table__item" data-title="Colour (SASS Variable):">Default text, <code>$text</code>, <code>$uq-neutral-dark80</code>, #2b2a29</td>
-      <td className="uqds-table__item" data-title="Line-height:">1.5</td>
-      <td className="uqds-table__item" data-title="Usage example:">Text bold</td>
+      <td className="uqds-table__item" data-title="Weight:">Medium 500</td>
+      <td className="uqds-table__item" data-title="Style:"> - </td>
+      <td className="uqds-table__item" data-title="Colour (SASS Variable):"><code>$text</code></td>
+      <td className="uqds-table__item" data-title="Line height:">1.5</td>
+      <td className="uqds-table__item" data-title="Usage example:">
+        <div class="uqds-fonts">
+          <div class="uqds-font uqds-font--roboto uqds-font--500">Text bold</div>
+        </div>
+      </td>
     </tr>
     <tr className="uqds-table__row">
       <td className="uqds-table__item">Emphasis, Accent</td>
       <td className="uqds-table__item" data-title="Font:">Merriweather</td>
       <td className="uqds-table__item" data-title="Size:">XL - 1rem, <br /> MD - 1rem</td>
       <td className="uqds-table__item" data-title="Weight:">Regular 400</td>
-      <td className="uqds-table__item" data-title="Colour (SASS Variable):">Default text, <code>$text--accent</code></td>
-      <td className="uqds-table__item" data-title="Line-height:">1.5</td>
-      <td className="uqds-table__item" data-title="Usage example:">Emphasis, Blockquote, Statement</td>
+      <td className="uqds-table__item" data-title="Style:">Italic <code>$text--accent</code></td>
+      <td className="uqds-table__item" data-title="Colour (SASS Variable):"> - </td>
+      <td className="uqds-table__item" data-title="Line height:">1.5</td>
+      <td className="uqds-table__item" data-title="Usage example:">
+        <div class="uqds-fonts">
+          <div class="uqds-font uqds-font--merriweather uqds-font--italic">Emphasis, Blockquote, Statement</div>
+        </div>
+      </td>
     </tr>
   </tbody>
 </table>
