--- a/packages/storybook-html/src/components/core/typography.story.mdx
+++ b/packages/storybook-html/src/components/core/typography.story.mdx
@@ -1,17 +1,14 @@
 import { Meta, Story, Canvas, Preview } from '@storybook/addon-docs/blocks';
 import './_fonts.scss';
 
-<Meta title="Core/Typography" />
+<Meta title="Core/Typography/Fonts" />
 
 # Typography
 At UQ, we have a set of complementary font assets and typeface rules that ensure a consistent look and feel of online content across devices and computers.
 
-Typography is the art and technique of arranging type (letters and characters). It sets the theme and mood of the design via the typeface family and font styles like size, weight, style, colour, line-height, letter-spacing etc on single and multiple lines.
-
 ## Fonts
 
-Online fonts are used for websites and applications, where the font can be embedded into code to display seamlessly. 
-
+Web based fonts are used for websites and applications, where the font can be embedded into code to display seamlessly. 
 The 3 fonts used for UQ online applications are Roboto, Merriweather & Montserrat.
 
 export const Fonts = () => `
@@ -26,76 +23,24 @@ export const Fonts = () => `
 
 > ***Print font usage*** Please refer to the [Print brand guidelines](https://marketing-communication.uq.edu.au/) for offline "Print" font applications.
 
-### Primary font
-
-Roboto is a Google font and therefore can be displayed in online applications seamlessly. Roboto is our alternative to Gotham for online environments.
-
 > While ***Gotham is our primary brand font***, We use alternative fonts online due to the costs to licence for websites and application and a lack of robust embedded versions. 
 
-### Secondary font
+## Styles
 
-MerriweatherMerriweather is a Google font and therefore can be displayed in online applications seamlessly. Merriweather can be used for pull out quotes and to break up long headings. It is ***not to be used for body text***.
-
-
-### Font licenses
-
-## Alternative fonts
-
-## Typeface list
-
-The 3 typefaces used in the design system are Roboto, Merriweather & Montserrat.
-
-export const FontList = () => `
+export const FontStyles = () => `
   <div class="uqds-fonts">
-    <div class="uqds-font uqds-font--roboto">Roboto Regular 400</div>
-    <div class="uqds-font uqds-font--roboto uqds-font--500">Roboto Medium 500</div>
-    <div class="uqds-font uqds-font--merriweather uqds-font--italic">Merriweather Regular 400 italic</div>
+    <div class="uqds-font uqds-font--roboto">Roboto Regular (400)</div>
+    <div class="uqds-font uqds-font--roboto uqds-font--italic">Roboto Regular (400) Italic</div>
+    <div class="uqds-font uqds-font--roboto uqds-font--500">Roboto Medium (500)</div>
+    <div class="uqds-font uqds-font--roboto uqds-font--500 uqds-font--italic">Roboto Medium (500) Italic</div>
+    <div class="uqds-font uqds-font--merriweather uqds-font--italic">Merriweather Regular (400) Italic</div>
     <div class="uqds-font uqds-font--montserrat uqds-font--500">Montserrat Medium 500</div>
   </div>
 `;
 
-<Story name="Font list">{FontList.bind({})}</Story>
+<Story name="Font styles">{FontStyles.bind({})}</Story>
 
-<br />
-
-## Font stack
-
-Roboto
-```scss
-font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
-```
-Merriweather
-```scss
-font-family: Merriweather, Georgia, serif;
-```
-Montserrat
-```scss
-font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
-```
-
-<br />
-
-## Loading fonts
-
-Copy the HTML or CSS lines below and paste it into your project to load design system fonts.
-
-### HTML
-```html
-<link rel="stylesheet" type="text/css" href="https://static.uq.net.au/v13/fonts/Roboto/roboto.css" />
-<link rel="stylesheet" type="text/css" href="https://static.uq.net.au/v13/fonts/Merriweather/merriweather.css" />
-<link rel="stylesheet" type="text/css" href="https://static.uq.net.au/v13/fonts/Montserrat/montserrat.css" />
-```
-
-### CSS/Sass
-```css
-@import url('https://static.uq.net.au/v13/fonts/Roboto/roboto.css');
-@import url('https://static.uq.net.au/v13/fonts/Merriweather/merriweather.css');
-@import url('https://static.uq.net.au/v13/fonts/Montserrat/montserrat.css');
-```
-
-<br />
-
-## Font size
+## Size
 
 <table>
   <thead>
@@ -154,140 +99,82 @@ Copy the HTML or CSS lines below and paste it into your project to load design s
   </tbody>
 </table>
 
-<br />
+## Embedding in projects
 
-## Font style
+### Font licence
 
-### Weight
+You can use them freely in your products & projects - print or digital, commercial or otherwise. However, you can't sell the fonts on their own.
 
-The 2 font weights used are Regular (400) and Medium (500).
-
-export const FontWeight = () => `
-  <div class="uqds-fonts">
-    <div class="uqds-font uqds-font--roboto">Regular (400)</div>
-    <div class="uqds-font uqds-font--roboto uqds-font--500">Medium (500)</div>
-  </div>
-`;
-
-<Story name="Font weights">{FontWeight.bind({})}</Story>
-
-<br />
-
-### Italic
-
-Italic style should be used when you need to emphasize certain words in a sentence or a statement.
-
-export const FontItalic = () => `
-  <div class="uqds-fonts">
-    <div class="uqds-font uqds-font--roboto uqds-font--italic">Roboto Regular (400) Italic</div>
-    <div class="uqds-font uqds-font--roboto uqds-font--500 uqds-font--italic">Roboto Medium (500) Italic</div>
-    <div class="uqds-font uqds-font--merriweather uqds-font--italic">Merriweather Regular (400) Italic</div>
-  </div>
-`;
-
-<Story name="Font italic">{FontItalic.bind({})}</Story>
-
-<br />
-
-## Base typography palette
-
-<table className="uqds-table uqds-table--card">
+<table>
   <thead>
-    <tr className="uqds-table__mobile-heading">
-      <th className="uqds-table__heading">Element</th>
-      <th className="uqds-table__heading">Font</th>
-      <th className="uqds-table__heading">Size</th>
-      <th className="uqds-table__heading">Weight</th>
-      <th className="uqds-table__heading">Colour (SASS Variable)</th>
-      <th className="uqds-table__heading">Line-height</th>
-      <th className="uqds-table__heading">Usage example</th>
+    <tr>
+    <th>Font</th>
+    <th>License</th>
     </tr>
   </thead>
   <tbody>
-    <tr className="uqds-table__row">
-      <td className="uqds-table__item">H1</td>
-      <td className="uqds-table__item" data-title="Font:">Montserrat</td>
-      <td className="uqds-table__item" data-title="Size:">XL - 2.5rem, <br /> MD - 1.875rem</td>
-      <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
-      <td className="uqds-table__item" data-title="Colour (SASS Variable):"><code>$uq-purple</code></td>
-      <td className="uqds-table__item" data-title="Line-height:">1.4</td>
-      <td className="uqds-table__item" data-title="Usage example:">Page Header</td>
+    <tr>
+      <td>Roboto</td>
+      <td>Apache License 2.0<br /> 
+      <a href="https://fonts.google.com/specimen/Roboto#license">Google, Roboto License</a></td>
     </tr>
-    <tr className="uqds-table__row">
-      <td className="uqds-table__item">H2</td>
-      <td className="uqds-table__item" data-title="Font:">Roboto</td>
-      <td className="uqds-table__item" data-title="Size:">XL - 2rem, <br /> MD - 1.5rem</td>
-      <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
-      <td className="uqds-table__item" data-title="Colour (SASS Variable):"><code>$uq-purple</code></td>
-      <td className="uqds-table__item" data-title="Line-height:">1.4</td>
-      <td className="uqds-table__item" data-title="Usage example:">Header</td>
+    <tr>
+      <td>Merriweather</td>
+      <td>SIL Open Font License (OFL)<br />
+      <a href="https://fonts.google.com/specimen/Merriweather#license">Google, Merriweather License</a></td>
     </tr>
-    <tr className="uqds-table__row">
-      <td className="uqds-table__item">H3</td>
-      <td className="uqds-table__item" data-title="Font:">Roboto</td>
-      <td className="uqds-table__item" data-title="Size:">XL - 1.5rem, <br /> MD - 1.375rem</td>
-      <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
-      <td className="uqds-table__item" data-title="Colour (SASS Variable):"><code>$uq-purple</code></td>
-      <td className="uqds-table__item" data-title="Line-height:">1.4</td>
-      <td className="uqds-table__item" data-title="Usage example:">Header</td>
-    </tr>
-    <tr className="uqds-table__row">
-      <td className="uqds-table__item">H4</td>
-      <td className="uqds-table__item" data-title="Font:">Roboto</td>
-      <td className="uqds-table__item" data-title="Size:">XL - 1.25rem, <br /> MD - 1.25rem</td>
-      <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
-      <td className="uqds-table__item" data-title="Colour (SASS Variable):"><code>$uq-purple</code></td>
-      <td className="uqds-table__item" data-title="Line-height:">1.4</td>
-      <td className="uqds-table__item" data-title="Usage example:">Header</td>
-    </tr>
-    <tr className="uqds-table__row">
-      <td className="uqds-table__item">H5</td>
-      <td className="uqds-table__item" data-title="Font:">Roboto</td>
-      <td className="uqds-table__item" data-title="Size:">XL - 1.125rem, <br /> MD - 1.125rem</td>
-      <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
-      <td className="uqds-table__item" data-title="Colour (SASS Variable):"><code>$uq-purple</code></td>
-      <td className="uqds-table__item" data-title="Line-height:">1.4</td>
-      <td className="uqds-table__item" data-title="Usage example:">Header</td>
-    </tr>
-    <tr className="uqds-table__row">
-      <td className="uqds-table__item">H6</td>
-      <td className="uqds-table__item" data-title="Font:">Roboto</td>
-      <td className="uqds-table__item" data-title="Size:">XL - 1rem, <br /> MD - 1rem</td>
-      <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
-      <td className="uqds-table__item" data-title="Colour (SASS Variable):"><code>$uq-purple</code></td>
-      <td className="uqds-table__item" data-title="Line-height:">1.4</td>
-      <td className="uqds-table__item" data-title="Usage example:">Header</td>
-    </tr>
-    <tr className="uqds-table__row">
-      <td className="uqds-table__item">Text</td>
-      <td className="uqds-table__item" data-title="Font:">Roboto</td>
-      <td className="uqds-table__item" data-title="Size:">XL - 1rem, <br /> MD - 1rem</td>
-      <td className="uqds-table__item" data-title="Weight:">Regular, 400</td>
-      <td className="uqds-table__item" data-title="Colour (SASS Variable):">Default text, <code>$text</code>, <code>$uq-neutral-dark80</code>, #2b2a29</td>
-      <td className="uqds-table__item" data-title="Line-height:">1.5</td>
-      <td className="uqds-table__item" data-title="Usage example:">Text</td>
-    </tr>
-    <tr className="uqds-table__row">
-      <td className="uqds-table__item">Bold</td>
-      <td className="uqds-table__item" data-title="Font:">Roboto</td>
-      <td className="uqds-table__item" data-title="Size:">XL - 1rem, <br /> MD - 1rem</td>
-      <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
-      <td className="uqds-table__item" data-title="Colour (SASS Variable):">Default text, <code>$text</code>, <code>$uq-neutral-dark80</code>, #2b2a29</td>
-      <td className="uqds-table__item" data-title="Line-height:">1.5</td>
-      <td className="uqds-table__item" data-title="Usage example:">Text bold</td>
-    </tr>
-    <tr className="uqds-table__row">
-      <td className="uqds-table__item">Emphasis, Accent</td>
-      <td className="uqds-table__item" data-title="Font:">Merriweather</td>
-      <td className="uqds-table__item" data-title="Size:">XL - 1rem, <br /> MD - 1rem</td>
-      <td className="uqds-table__item" data-title="Weight:">Regular 400</td>
-      <td className="uqds-table__item" data-title="Colour (SASS Variable):">Default text, <code>$text--accent</code></td>
-      <td className="uqds-table__item" data-title="Line-height:">1.5</td>
-      <td className="uqds-table__item" data-title="Usage example:">Emphasis, Blockquote, Statement</td>
+    <tr>
+      <td>Montserrat</td>
+      <td>SIL Open Font License (OFL)<br />
+      <a href="https://fonts.google.com/specimen/Montserrat#license">Google, Montserrat License</a></td>
     </tr>
   </tbody>
 </table>
 
+### Font stack
+
+Roboto
+```css
+font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
+```
+Merriweather
+```css
+font-family: Merriweather, Georgia, serif;
+```
+Montserrat
+```css
+font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
+```
+
 <br />
 
-## Accessibility
+### Loading fonts, HTML, CSS
+
+Copy the HTML or CSS lines below and paste it into your project to load design system fonts.
+
+#### HTML
+```html
+<link rel="stylesheet" type="text/css" href="https://static.uq.net.au/v13/fonts/Roboto/roboto.css" />
+<link rel="stylesheet" type="text/css" href="https://static.uq.net.au/v13/fonts/Merriweather/merriweather.css" />
+<link rel="stylesheet" type="text/css" href="https://static.uq.net.au/v13/fonts/Montserrat/montserrat.css" />
+```
+
+#### CSS
+```css
+@import url('https://static.uq.net.au/v13/fonts/Roboto/roboto.css');
+@import url('https://static.uq.net.au/v13/fonts/Merriweather/merriweather.css');
+@import url('https://static.uq.net.au/v13/fonts/Montserrat/montserrat.css');
+```
+
+## Alternative fonts
+
+When online platforms and systems are not able to display our brand font (ie. When embedding fonts is not possible) such as a third party application. In these instances, use our
+alternative fonts if available. If none of the preferred options are available it is recommended to use the default font provided, ***Do not choose random alternative fonts***. 
+
+### Arial
+
+It can be used for most heading and body copy needs. This font is available as a standard PC and Mac font.
+
+### Georgia
+
+Georgia can be used for pull out quotes and to break up long headings. ***It is not to be used for body text***.
