--- a/packages/storybook-html/src/components/core/typography-applying.story.mdx
+++ b/packages/storybook-html/src/components/core/typography-applying.story.mdx
@@ -4,9 +4,7 @@ import './_fonts.scss';
 <Meta title="Core/Typography/Applying typography" />
 
 # Applying Typography
-Most common use cases have already been setup in the basic HTML elements and components. 
-
-Follow existing examples or reference the chart below when configuring new websites and componets. 
+Most common use cases have already been setup in the basic HTML elements and components. Follow existing examples or reference the chart below when configuring new websites and components. 
 
 * The font weights used are Regular (400) and Medium (500). 
 * Italic style should be used when you need to emphasize certain words in a sentence or a statement.
