added doc, update example, private design, tidy up

--- a/packages/storybook-html/src/components/side-nav/side-nav.docs.mdx
+++ b/packages/storybook-html/src/components/side-nav/side-nav.docs.mdx
@@ -7,7 +7,7 @@ import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 
 ## Overview
 
-The side nav component is a multi level submenu and generally appears to the right side of the webpage content. On smaller viewports, the side nav shifts underneath the page content. 
+A vertical list of links for site navigation typically placed next to the body content. On smaller viewports, the side nav shifts underneath the page content. 
 
 ## Default example
 
@@ -85,6 +85,13 @@ The side nav component is a multi level submenu and generally appears to the rig
 </div>
 ```
 
+## When and how to use
+
+- When there is related links to the webpage content, use side nav component. 
+- Use a grid layout to place the side nav component next to the webpage content.
+
 ## Accessibility
+
+Add `aria-label` tag to the side nav component `<nav>` element.
 
 ## Known issues
