--- a/packages/storybook-html/src/components/side-nav/side-nav.docs.mdx
+++ b/packages/storybook-html/src/components/side-nav/side-nav.docs.mdx
@@ -21,22 +21,22 @@ A vertical list of links for site navigation typically placed next to the body c
 <!-- Side nav single-level -->
 <div class="uq-side-nav">
 
-  <!-- Side nav title -->
+  <!-- Parent page title -->
   <h3 class="uq-side-nav__title">
-    <a href="#" class="uq-side-nav__title-link">Side nav title</a>
+    <a href="#" class="uq-side-nav__title-link">Parent page title</a>
   </h3>
 
   <!-- Side nav -->
-  <nav class="uq-side-nav__container" aria-label="Side navigation">
+  <nav class="uq-side-nav__container" aria-label="Side navigation" id="jsSideNav">
     <ul class="uq-side-nav__list uq-side-nav__list--level-1">
       <li class="uq-side-nav__list-item uq-side-nav__list-item--active">
-        <a href="#" class="uq-side-nav__link">Sidenav list1</a>
+        <a href="#" class="uq-side-nav__link">Sibling list1</a>
       </li>
       <li class="uq-side-nav__list-item">
-        <a href="#" class="uq-side-nav__link">Sidenav list2</a>
+        <a href="#" class="uq-side-nav__link">Sibling list2</a>
       </li>
       <li class="uq-side-nav__list-item">
-        <a href="#" class="uq-side-nav__link">Sidenav list3</a>
+        <a href="#" class="uq-side-nav__link">Sibling list3</a>
       </li>
     </ul>
   </nav>
@@ -54,30 +54,31 @@ A vertical list of links for site navigation typically placed next to the body c
 <!-- Side nav multi-level -->
 <div class="uq-side-nav">
 
-  <!-- Side nav title -->
+  <!-- Parent page title -->
   <h3 class="uq-side-nav__title">
-    <a href="#" class="uq-side-nav__title-link">Side nav title</a>
+    <a href="#" class="uq-side-nav__title-link">Parent page title</a>
   </h3>
 
   <!-- Side nav -->
-  <nav class="uq-side-nav__container" aria-label="Side navigation">
+  <nav class="uq-side-nav__container" aria-label="Side navigation" id="jsSideNav">
     <ul class="uq-side-nav__list uq-side-nav__list--level-1">
       <li class="uq-side-nav__list-item">
-        <a href="#" class="uq-side-nav__link">Sidenav list1</a>
+        <a href="#" class="uq-side-nav__link">Sibling list1</a>
       </li>
-      <li class="uq-side-nav__list-item uq-side-nav__list-item--has-subnav uq-side-nav__list-item--active">
-        <a href="#" class="uq-side-nav__link" aria-haspopup="true" aria-expanded="true">Sidenav list2</a>
-        <ul class="uq-side-nav__list uq-side-nav__list--level-2" aria-label="Sidenav list2 submenu">
+      <li class="uq-side-nav__list-item uq-side-nav__list-item--has-subnav  uq-side-nav__list-item--active  uq-side-nav__list-item--open">
+        <a href="#" class="uq-side-nav__link" aria-haspopup="true" aria-expanded="true">Sibling list2</a>
+        <span class="uq-side-nav__list-item__sub-toggle" tabindex="0">Open</span>
+        <ul class="uq-side-nav__list uq-side-nav__list--level-2" aria-label="Sibling list2 submenu">
           <li class="uq-side-nav__list-item">
-            <a href="#" class="uq-side-nav__link">Sidenav list2 submenu1</a>
+            <a href="#" class="uq-side-nav__link">Sibling list2 submenu1</a>
           </li>
           <li class="uq-side-nav__list-item uq-side-nav__list-item--active">
-            <a href="#" class="uq-side-nav__link">Sidenav list2 submenu2</a>
+            <a href="#" class="uq-side-nav__link">Sibling list2 submenu2</a>
           </li>
         </ul>
       </li>
       <li class="uq-side-nav__list-item">
-        <a href="#" class="uq-side-nav__link">Sidenav list3</a>
+        <a href="#" class="uq-side-nav__link">Sibling list3</a>
       </li>
     </ul>
   </nav>
