js deleted, sticking to basic side nav

--- a/packages/storybook-html/src/components/side-nav/side-nav.docs.mdx
+++ b/packages/storybook-html/src/components/side-nav/side-nav.docs.mdx
@@ -88,7 +88,7 @@ A vertical list of links for site navigation typically placed next to the body c
 
 ## When and how to use
 
-- When there is related links to the webpage content, use side nav component. 
+- Use when there is related links to the webpage content. 
 - Use a grid layout to place the side nav component next to the webpage content.
 
 ## Accessibility
