--- a/packages/storybook-html/src/components/core/typography-applying.story.mdx
+++ b/packages/storybook-html/src/components/core/typography-applying.story.mdx
@@ -30,6 +30,7 @@ Most common use cases have already been setup in the basic HTML elements and com
 
 ## Basic typography usage
 
+export const TypographyUsage = () => `
 <table className="uqds-table uqds-table--card">
   <thead>
     <tr className="uqds-table__mobile-heading">
@@ -44,7 +45,7 @@ Most common use cases have already been setup in the basic HTML elements and com
   </thead>
   <tbody>
     <tr className="uqds-table__row">
-      <td className="uqds-table__item">H1</td>
+      <td className="uqds-table__item">H1 <h1>H1 header</h1></td>
       <td className="uqds-table__item" data-title="Font:">Montserrat</td>
       <td className="uqds-table__item" data-title="Size:">XL - 2.5rem, <br /> MD - 1.875rem</td>
       <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
@@ -53,7 +54,7 @@ Most common use cases have already been setup in the basic HTML elements and com
       <td className="uqds-table__item" data-title="Usage example:">Page Header</td>
     </tr>
     <tr className="uqds-table__row">
-      <td className="uqds-table__item">H2</td>
+      <td className="uqds-table__item">H2 <h2>H2 header</h2></td>
       <td className="uqds-table__item" data-title="Font:">Roboto</td>
       <td className="uqds-table__item" data-title="Size:">XL - 2rem, <br /> MD - 1.5rem</td>
       <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
@@ -62,7 +63,7 @@ Most common use cases have already been setup in the basic HTML elements and com
       <td className="uqds-table__item" data-title="Usage example:">Header</td>
     </tr>
     <tr className="uqds-table__row">
-      <td className="uqds-table__item">H3</td>
+      <td className="uqds-table__item">H3 <h3>H3 header</h3></td>
       <td className="uqds-table__item" data-title="Font:">Roboto</td>
       <td className="uqds-table__item" data-title="Size:">XL - 1.5rem, <br /> MD - 1.375rem</td>
       <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
@@ -71,7 +72,7 @@ Most common use cases have already been setup in the basic HTML elements and com
       <td className="uqds-table__item" data-title="Usage example:">Header</td>
     </tr>
     <tr className="uqds-table__row">
-      <td className="uqds-table__item">H4</td>
+      <td className="uqds-table__item">H4 <h4>H4 header</h4></td>
       <td className="uqds-table__item" data-title="Font:">Roboto</td>
       <td className="uqds-table__item" data-title="Size:">XL - 1.25rem, <br /> MD - 1.25rem</td>
       <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
@@ -80,7 +81,7 @@ Most common use cases have already been setup in the basic HTML elements and com
       <td className="uqds-table__item" data-title="Usage example:">Header</td>
     </tr>
     <tr className="uqds-table__row">
-      <td className="uqds-table__item">H5</td>
+      <td className="uqds-table__item">H5 <h5>H5 header</h5></td>
       <td className="uqds-table__item" data-title="Font:">Roboto</td>
       <td className="uqds-table__item" data-title="Size:">XL - 1.125rem, <br /> MD - 1.125rem</td>
       <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
@@ -89,7 +90,7 @@ Most common use cases have already been setup in the basic HTML elements and com
       <td className="uqds-table__item" data-title="Usage example:">Header</td>
     </tr>
     <tr className="uqds-table__row">
-      <td className="uqds-table__item">H6</td>
+      <td className="uqds-table__item">H6 <h6>H6 header</h6></td>
       <td className="uqds-table__item" data-title="Font:">Roboto</td>
       <td className="uqds-table__item" data-title="Size:">XL - 1rem, <br /> MD - 1rem</td>
       <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
@@ -98,7 +99,7 @@ Most common use cases have already been setup in the basic HTML elements and com
       <td className="uqds-table__item" data-title="Usage example:">Header</td>
     </tr>
     <tr className="uqds-table__row">
-      <td className="uqds-table__item">Text</td>
+      <td className="uqds-table__item"><p>Paragraph text</p></td>
       <td className="uqds-table__item" data-title="Font:">Roboto</td>
       <td className="uqds-table__item" data-title="Size:">XL - 1rem, <br /> MD - 1rem</td>
       <td className="uqds-table__item" data-title="Weight:">Regular, 400</td>
@@ -107,7 +108,7 @@ Most common use cases have already been setup in the basic HTML elements and com
       <td className="uqds-table__item" data-title="Usage example:">Text</td>
     </tr>
     <tr className="uqds-table__row">
-      <td className="uqds-table__item">Bold</td>
+      <td className="uqds-table__item"><strong>Strong Text</strong></td>
       <td className="uqds-table__item" data-title="Font:">Roboto</td>
       <td className="uqds-table__item" data-title="Size:">XL - 1rem, <br /> MD - 1rem</td>
       <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
@@ -116,7 +117,7 @@ Most common use cases have already been setup in the basic HTML elements and com
       <td className="uqds-table__item" data-title="Usage example:">Text bold</td>
     </tr>
     <tr className="uqds-table__row">
-      <td className="uqds-table__item">Emphasis, Accent</td>
+      <td className="uqds-table__item"><em>Emphasis text</em></td>
       <td className="uqds-table__item" data-title="Font:">Merriweather</td>
       <td className="uqds-table__item" data-title="Size:">XL - 1rem, <br /> MD - 1rem</td>
       <td className="uqds-table__item" data-title="Weight:">Regular 400</td>
@@ -126,6 +127,9 @@ Most common use cases have already been setup in the basic HTML elements and com
     </tr>
   </tbody>
 </table>
+`;
+
+<Story name="Typogrphy Usage">{TypographyUsage.bind({})}</Story>
 
 ## Example Typography 
 
