storybook-html: open app-maps doc source code display

--- a/packages/storybook-html/src/deliverables/uq-maps/uq-maps.docs.mdx
+++ b/packages/storybook-html/src/deliverables/uq-maps/uq-maps.docs.mdx
@@ -15,7 +15,7 @@ What the search field looks like when the app loads.
 Use the HTML markup provided in the example below to apply the styles from the
 provided CSS.
 
-<Canvas>
+<Canvas withSource="open">
   <Story height={120} id="deliverables-uq-maps--search-field" />
 </Canvas>
 
@@ -30,7 +30,7 @@ an origin or destination in wayfinding mode.
 Using the same HTML markup as above, also apply the `uq-maps__search-field--is-focused`
 class to the container.
 
-<Canvas>
+<Canvas withSource="open">
   <Story height={200} id="deliverables-uq-maps--search-field-focused" />
 </Canvas>
 
@@ -43,7 +43,7 @@ What the search field looks like when there has been text entered.
 Using the same HTML markup as above, except we're applying the `uq-maps__search-field--is-searching`
 class to the container instead.
 
-<Canvas>
+<Canvas withSource="open">
   <Story height={120} id="deliverables-uq-maps--search-field-searching" />
 </Canvas>
 
@@ -58,7 +58,7 @@ class to the container instead. We also have to add in some extra markup and
 scripted behaviour for the *Material* progress indicator. Please see example
 code.
 
-<Canvas>
+<Canvas withSource="open">
   <Story height={120} id="deliverables-uq-maps--search-field-working" />
 </Canvas>
 
@@ -74,7 +74,7 @@ location.
 Use the HTML markup provided in the example below to apply the styles from the
 provided CSS.
 
-<Canvas>
+<Canvas withSource="open">
   <Story height={240} id="deliverables-uq-maps--wayfinding-control" />
 </Canvas>
 
@@ -87,6 +87,6 @@ class to the container instead. We also have to add in some extra markup and
 scripted behaviour for the *Material* progress indicator. Please see example
 code.
 
-<Canvas>
+<Canvas withSource="open">
   <Story height={240} id="deliverables-uq-maps--wayfinding-control-working" />
 </Canvas>
