--- a/packages/storybook-html/src/components/core/typography-applying.story.mdx
+++ b/packages/storybook-html/src/components/core/typography-applying.story.mdx
@@ -5,29 +5,66 @@ import './_fonts.scss';
 
 # Applying Typography
 
-Most common use cases have already been setup in the basic HTML elements and components. Follow existing examples or reference the chart below when configuring new websites and components.
+Most common use cases have already been setup in the basic HTML elements and components. Follow existing examples or reference the charts below when configuring new websites and components.
+
+## General usage
+
+export const FontUsage = () => `
+<table className="uqds-table uqds-table--card">
+  <thead>
+    <tr>
+      <th>Font</th>
+      <th>Usage</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Roboto</td>
+      <td>Used for headings and body text. Roboto is the primary font used on websites and applications</td>
+    </tr>
+    <tr>
+      <td>Merriweather</td>
+      <td>Merriweather can be used for pull out quotes and to break up long headings. <strong>not to be used for body text</strong>.</td>
+    </tr>
+    <tr>
+      <td>Montserrat</td>
+      <td>Montserrat is used for the main page (banner) heading. <strong>not to be used for body text</strong>.</td>
+    </tr>
+    <tr>
+      <td>Monospace</td>
+      <td>The monospace font stack is often applied to special HTML tags typically used to distinguish code or data from natural-language text.</td>
+    </tr>
+  </tbody>
+  </table>
+`;
+
+<Story name="Font Usage">{FontUsage.bind({})}</Story>
 
 - The font weights used are Regular (400) and Medium (500).
 - Italic style should be used when you need to emphasize certain words in a sentence or a statement.
 
-### Roboto
+## Written style guide
 
-- Roboto is the primary font used on websites and applications
-- Roboto can be used for headings and body text.
+Reference the offical [Written style guide](https://marketing-communication.uq.edu.au/written-style-guide) for detailed instructions for writing content.  
 
-### Merriweather
+### Capitalization / Letter-case
 
-- Merriweather can be used for pull out quotes and to break up long headings.
-- Merriweather is **_not to be used for body text_**.
+Use sentence case/minimal capitalisation in headings and subheadings. Use a capital for the first letter of the first word, with subsequent words in lower case.
 
-### Montserrat
+Sentance case
 
-- Montserrat is used for main page (banner) heading.
-- Montserrat is **_not to be used for body text_**.
+All-caps text — meaning text with all the letters capitalised — is best used sparingly.
 
-### Monospace
+School and faculty naming 
 
-- The monospace font stack is often applied to special HTML tags typically used to distinguish code or data from natural-language text.
+### Abbreviations
+### Truncation
+
+Ellipsis, use the Ellipsis to indicate incompletenes. Truncated text.
+
+Line Length. 
+Limit line length to 70–80 characters.
+Font size should be a minimum of 16pt.
 
 ## Basic typography usage
 
@@ -38,93 +75,59 @@ export const TypographyUsage = () => `
       <th className="uqds-table__heading">Element</th>
       <th className="uqds-table__heading">Font</th>
       <th className="uqds-table__heading">Size</th>
-      <th className="uqds-table__heading">Weight</th>
-      <th className="uqds-table__heading">Colour (SASS Variable)</th>
       <th className="uqds-table__heading">Line-height</th>
+      <th className="uqds-table__heading">Weight</th>
       <th className="uqds-table__heading">Usage example</th>
     </tr>
   </thead>
   <tbody>
     <tr className="uqds-table__row">
-      <td className="uqds-table__item">H1 <h1>H1 header</h1></td>
+      <td className="uqds-table__item"><h1>H1 header</h1></td>
       <td className="uqds-table__item" data-title="Font:">Montserrat</td>
-      <td className="uqds-table__item" data-title="Size:">XL - 2.5rem, <br /> MD - 1.875rem</td>
-      <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
-      <td className="uqds-table__item" data-title="Colour (SASS Variable):"><code>$uq-purple</code></td>
+      <td className="uqds-table__item" data-title="Size:"><code>$font-size-xxxxl</code></td>
       <td className="uqds-table__item" data-title="Line-height:">1.4</td>
+      <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
       <td className="uqds-table__item" data-title="Usage example:">Page Header</td>
     </tr>
     <tr className="uqds-table__row">
-      <td className="uqds-table__item">H2 <h2>H2 header</h2></td>
-      <td className="uqds-table__item" data-title="Font:">Roboto</td>
-      <td className="uqds-table__item" data-title="Size:">XL - 2rem, <br /> MD - 1.5rem</td>
-      <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
-      <td className="uqds-table__item" data-title="Colour (SASS Variable):"><code>$uq-purple</code></td>
+      <td className="uqds-table__item"><h2>H2 header</h2></td>
+      <td className="uqds-table__item" data- stitle="Font:">Roboto</td>
+      <td className="uqds-table__item" data-title="Size:"><code>$font-size-xxxl</code></td>
       <td className="uqds-table__item" data-title="Line-height:">1.4</td>
+      <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
       <td className="uqds-table__item" data-title="Usage example:">Header</td>
     </tr>
     <tr className="uqds-table__row">
-      <td className="uqds-table__item">H3 <h3>H3 header</h3></td>
+      <td className="uqds-table__item"><h3>H3 header</h3></td>
       <td className="uqds-table__item" data-title="Font:">Roboto</td>
-      <td className="uqds-table__item" data-title="Size:">XL - 1.5rem, <br /> MD - 1.375rem</td>
-      <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
-      <td className="uqds-table__item" data-title="Colour (SASS Variable):"><code>$uq-purple</code></td>
+      <td className="uqds-table__item" data-title="Size:"><code>$font-size-xxl</code></td>
       <td className="uqds-table__item" data-title="Line-height:">1.4</td>
-      <td className="uqds-table__item" data-title="Usage example:">Header</td>
-    </tr>
-    <tr className="uqds-table__row">
-      <td className="uqds-table__item">H4 <h4>H4 header</h4></td>
-      <td className="uqds-table__item" data-title="Font:">Roboto</td>
-      <td className="uqds-table__item" data-title="Size:">XL - 1.25rem, <br /> MD - 1.25rem</td>
       <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
-      <td className="uqds-table__item" data-title="Colour (SASS Variable):"><code>$uq-purple</code></td>
-      <td className="uqds-table__item" data-title="Line-height:">1.4</td>
-      <td className="uqds-table__item" data-title="Usage example:">Header</td>
-    </tr>
-    <tr className="uqds-table__row">
-      <td className="uqds-table__item">H5 <h5>H5 header</h5></td>
-      <td className="uqds-table__item" data-title="Font:">Roboto</td>
-      <td className="uqds-table__item" data-title="Size:">XL - 1.125rem, <br /> MD - 1.125rem</td>
-      <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
-      <td className="uqds-table__item" data-title="Colour (SASS Variable):"><code>$uq-purple</code></td>
-      <td className="uqds-table__item" data-title="Line-height:">1.4</td>
-      <td className="uqds-table__item" data-title="Usage example:">Header</td>
-    </tr>
-    <tr className="uqds-table__row">
-      <td className="uqds-table__item">H6 <h6>H6 header</h6></td>
-      <td className="uqds-table__item" data-title="Font:">Roboto</td>
-      <td className="uqds-table__item" data-title="Size:">XL - 1rem, <br /> MD - 1rem</td>
-      <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
-      <td className="uqds-table__item" data-title="Colour (SASS Variable):"><code>$uq-purple</code></td>
-      <td className="uqds-table__item" data-title="Line-height:">1.4</td>
       <td className="uqds-table__item" data-title="Usage example:">Header</td>
     </tr>
     <tr className="uqds-table__row">
       <td className="uqds-table__item"><p>Paragraph text</p></td>
       <td className="uqds-table__item" data-title="Font:">Roboto</td>
-      <td className="uqds-table__item" data-title="Size:">XL - 1rem, <br /> MD - 1rem</td>
-      <td className="uqds-table__item" data-title="Weight:">Regular, 400</td>
-      <td className="uqds-table__item" data-title="Colour (SASS Variable):">Default text, <code>$text</code>, <code>$uq-neutral-dark80</code>, #2b2a29</td>
+      <td className="uqds-table__item" data-title="Size:"><code>$font-size-m</code></td>
       <td className="uqds-table__item" data-title="Line-height:">1.5</td>
+      <td className="uqds-table__item" data-title="Weight:">Regular, 400</td>
       <td className="uqds-table__item" data-title="Usage example:">Text</td>
     </tr>
     <tr className="uqds-table__row">
       <td className="uqds-table__item"><strong>Strong Text</strong></td>
       <td className="uqds-table__item" data-title="Font:">Roboto</td>
-      <td className="uqds-table__item" data-title="Size:">XL - 1rem, <br /> MD - 1rem</td>
-      <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
-      <td className="uqds-table__item" data-title="Colour (SASS Variable):">Default text, <code>$text</code>, <code>$uq-neutral-dark80</code>, #2b2a29</td>
+      <td className="uqds-table__item" data-title="Size:"><code>$font-size-m</code></td>
       <td className="uqds-table__item" data-title="Line-height:">1.5</td>
+      <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
       <td className="uqds-table__item" data-title="Usage example:">Text bold</td>
     </tr>
     <tr className="uqds-table__row">
       <td className="uqds-table__item"><em>Emphasis text</em></td>
       <td className="uqds-table__item" data-title="Font:">Merriweather</td>
-      <td className="uqds-table__item" data-title="Size:">XL - 1rem, <br /> MD - 1rem</td>
-      <td className="uqds-table__item" data-title="Weight:">Regular 400</td>
-      <td className="uqds-table__item" data-title="Colour (SASS Variable):">Default text, <code>$text--accent</code></td>
+      <td className="uqds-table__item" data-title="Size:"><code>$font-size-m</code></td>
       <td className="uqds-table__item" data-title="Line-height:">1.5</td>
-      <td className="uqds-table__item" data-title="Usage example:">Emphasis, Blockquote, Statement</td>
+      <td className="uqds-table__item" data-title="Weight:">Regular 400</td>
+      <td className="uqds-table__item" data-title="Usage example:">Emphasis</td>
     </tr>
   </tbody>
 </table>
@@ -137,25 +140,18 @@ export const TypographyUsage = () => `
 export const ExampleType = () => `
     <div class="uqds-body__container">
       <h1>Heading level 1 (h1)</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse interdum nulla vitae consectetur interdum. Quisque sed nibh in lorem malesuada egestas. Integer varius orci in ligula mollis sodales. Sed dapibus rutrum finibus. Vestibulum tellus velit, dictum eu cursus at, luctus condimentum leo. Vestibulum malesuada consectetur sem, nec fermentum nibh molestie at. Pellentesque posuere enim leo, in blandit sem interdum ut. Duis lobortis lectus vitae mi pellentesque sagittis. Fusce eget eros sit amet enim placerat commodo quis id nisl.</p>
-      <p><strong>Strong text</strong> <em>Emphasis text</em></p>
+      <p><strong>Strong text</strong> <em>Emphasis text</em> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse interdum nulla vitae consectetur interdum. Quisque sed nibh in lorem malesuada egestas. Integer varius orci in ligula mollis sodales. Sed dapibus rutrum finibus. Vestibulum tellus velit, dictum eu cursus at, luctus condimentum leo. Vestibulum malesuada consectetur sem, nec fermentum nibh molestie at. Pellentesque posuere enim leo, in blandit sem interdum ut. Duis lobortis lectus vitae mi pellentesque sagittis. Fusce eget eros sit amet enim placerat commodo quis id nisl.</p>
       <h2>Heading level 2 (h2)</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse interdum nulla vitae consectetur interdum. Quisque sed nibh in lorem malesuada egestas. Integer varius orci in ligula mollis sodales. Sed dapibus rutrum finibus. Vestibulum tellus velit, dictum eu cursus at, luctus condimentum leo. Vestibulum malesuada consectetur sem, nec fermentum nibh molestie at. Pellentesque posuere enim leo, in blandit sem interdum ut. Duis lobortis lectus vitae mi pellentesque sagittis. Fusce eget eros sit amet enim placerat commodo quis id nisl.</p>
       <blockquote>Fusce vitae tortor consequat, consectetur metus id, ultricies risus. Nulla pharetra ornare sem, at placerat nisi sollicitudin bibendum. Nulla in pulvinar augue. Etiam tincidunt leo egestas congue congue. Phasellus feugiat mattis finibus. Duis bibendum pharetra risus, non aliquet augue consequat sit amet. Vestibulum sit amet enim fermentum, fringilla massa nec, facilisis augue.</blockquote>
       <h3>Heading level 3 (h3)</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse interdum nulla vitae consectetur interdum. Quisque sed nibh in lorem malesuada egestas. Integer varius orci in ligula mollis sodales. Sed dapibus rutrum finibus. Vestibulum tellus velit, dictum eu cursus at, luctus condimentum leo. Vestibulum malesuada consectetur sem, nec fermentum nibh molestie at. Pellentesque posuere enim leo, in blandit sem interdum ut. Duis lobortis lectus vitae mi pellentesque sagittis. Fusce eget eros sit amet enim placerat commodo quis id nisl.</p>
-      <h4>Heading level 4 (h4)</h4>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse interdum nulla vitae consectetur interdum. Quisque sed nibh in lorem malesuada egestas. Integer varius orci in ligula mollis sodales. Sed dapibus rutrum finibus. Vestibulum tellus velit, dictum eu cursus at, luctus condimentum leo. Vestibulum malesuada consectetur sem, nec fermentum nibh molestie at. Pellentesque posuere enim leo, in blandit sem interdum ut. Duis lobortis lectus vitae mi pellentesque sagittis. Fusce eget eros sit amet enim placerat commodo quis id nisl.</p>
-      <h5>Heading level 5 (h5)</h5>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse interdum nulla vitae consectetur interdum. Quisque sed nibh in lorem malesuada egestas. Integer varius orci in ligula mollis sodales. Sed dapibus rutrum finibus. Vestibulum tellus velit, dictum eu cursus at, luctus condimentum leo. Vestibulum malesuada consectetur sem, nec fermentum nibh molestie at. Pellentesque posuere enim leo, in blandit sem interdum ut. Duis lobortis lectus vitae mi pellentesque sagittis. Fusce eget eros sit amet enim placerat commodo quis id nisl.</p>
-      <h6>Heading level 6 (h6)</h6>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse interdum nulla vitae consectetur interdum. Quisque sed nibh in lorem malesuada egestas. Integer varius orci in ligula mollis sodales. Sed dapibus rutrum finibus. Vestibulum tellus velit, dictum eu cursus at, luctus condimentum leo. Vestibulum malesuada consectetur sem, nec fermentum nibh molestie at. Pellentesque posuere enim leo, in blandit sem interdum ut. Duis lobortis lectus vitae mi pellentesque sagittis. Fusce eget eros sit amet enim placerat commodo quis id nisl.</p>
-      <blockquote>Fusce vitae tortor consequat, consectetur metus id, ultricies risus. Nulla pharetra ornare sem, at placerat nisi sollicitudin bibendum. Nulla in pulvinar augue. Etiam tincidunt leo egestas congue congue. Phasellus feugiat mattis finibus. Duis bibendum pharetra risus, non aliquet augue consequat sit amet. Vestibulum sit amet enim fermentum, fringilla massa nec, facilisis augue.</blockquote>
-      <p>Praesent risus libero, viverra eu libero ultricies, tincidunt posuere sem. Phasellus eros mauris, commodo at orci ut, dictum consectetur sem. Sed urna elit, faucibus et feugiat tincidunt, ultrices at dui. Nulla facilisi. Praesent eget urna eget odio ullamcorper ornare et ut arcu. Integer mollis risus sit amet gravida congue. Praesent eget efficitur erat, ut sodales magna. Nulla at ullamcorper tortor. Aenean et porta nulla. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nullam aliquet augue eu elementum pretium. Etiam ac feugiat orci, ac molestie tortor. In ac suscipit sapien. Donec tempus mauris id ex tristique convallis nec sit amet ex. Integer semper porttitor sapien ut interdum.</p>
     </div>
 `;
 
 <Story name="Text block">{ExampleType.bind({})}</Story>
+
+## Inline text semantics
 
 export const InlineSemantics = () => `
 <table class="standard-table">
@@ -169,7 +165,7 @@ export const InlineSemantics = () => `
  <tbody>
   <tr>
    <td style="vertical-align: top;"><a href="/en-US/docs/Web/HTML/Element/a" title="The HTML <a> element (or anchor element), with its href attribute, creates a hyperlink to web pages, files, email addresses, locations in the same page, or anything else a URL can address."><code>&lt;a&gt;</code></a></td>
-   <td><a href=#>MAd mad world</a/></td>
+   <td><a href=#>Mad mad world</a/></td>
    <td>The <strong>HTML <code>&lt;a&gt;</code> element</strong> (or <em>anchor</em> element), with <a href="#href">its <code>href</code> attribute</a>, creates a hyperlink to web pages, files, email addresses, locations in the same page, or anything else a URL can address.</td>
   </tr>
   <tr>
